Bug 1783936 - Drop "ask the main thread to" words from a coment about scroll snap in AsyncPanZoomController::SnapBackIfOverscrolled. r=botond, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D155048